Time: 31 ms (59.09%), Space: 51.6 MB (50.86%) - LeetHub